[package]
name = "async-bpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# async-channel = "2.3"
core_affinity = "0.8"
crossbeam-channel = "0.5.13"
derivative = "2.2"
libc = "0.2"
rand = "0.8"
send_wrapper = "0.6"
thread_local = "1.1"
# tokio = { version = "1.39", features = ["macros", "rt", "sync", "time"] }
# tokio-uring = "0.5"
zipf = "7.0"

[dev-dependencies]
tokio = { version = "1.39", features = ["full"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
