[package]
name = "async-bpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-channel = "2.3.1"
core_affinity = "0.8"
derivative = "2.2"
libc = "0.2"
rand = "0.8"
scc = "2.1"
tokio-uring = "0.5"
zipf = "7.0"

# Pin version "1.27" for a missing method.
tokio = { version = "1.27", features = ["macros", "rt", "sync", "time"] }

# Pin more recent versions for `-Zminimal-versions`.
bitflags = "1.1" # For tokio-uring -> io-uring -> bitflags.
proc-macro2 = "1.0.60" # For a missing feature.
slab = "0.4.4" # For a missing method.

[dev-dependencies]
tokio = { version = "1.27", features = ["full"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true
